--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc --build",
     "dev": "nodemon src/index.ts",
-    "start": "ts-node src/index.ts"
+    "start": "node dist/index.js"
   },
   "keywords": [],
   "author": "",
