--- a/package.json
+++ b/package.json
@@ -28,12 +28,15 @@
   "dependencies": {
     "@prisma/client": "^5.20.0",
     "@supabase/supabase-js": "^2.47.0",
+    "@types/uuid": "^10.0.0",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "express-rate-limit": "^7.5.0",
     "hono": "^4.6.12",
     "multer": "^1.4.5-lts.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
+    "uuid": "^11.1.0",
     "zod": "^3.23.8"
   }
 }
